# zref-zimage-prompt

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
comfy/zref_prompt/: README.md  __init__.py  _bootstrap.py  nodes.py
docs/: GITHUB_SETUP.md  INSTALL.md
scripts/: publish_github.ps1  runpod_setup.sh
src/zref/: __init__.py  cache.py  cli.py  config.py  logging.py  pipeline.py  schema.py
src/zref/api/: server.py
src/zref/compiler/: __init__.py  narrative_prose.py  presets.py  realism.py  tokenizer_util.py  zimage.py
src/zref/eval/: __init__.py  similarity.py
src/zref/extraction/: __init__.py  extractor.py
src/zref/extraction/prompts/: __init__.py  v1_system.md  v1_user.md
src/zref/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py  retry.py
tests/: conftest.py  test_cache.py  test_compiler.py  test_realism.py  test_schema.py
