[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zref"
version = "0.1.0"
description = "Reference image to Z-Image (Qwen3-4B) prompts: enterprise extraction + token-budgeted compiler"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zref contributors" }]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pillow>=10.0",
    "transformers>=4.45",
    "tokenizers>=0.20",
    "openai>=1.55",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
eval = [
    "torch>=2.2",
    "torchvision>=0.17",
    "open-clip-torch>=2.24",
    "timm>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
zref = "zref.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"zref" = ["py.typed"]
"zref.extraction.prompts" = ["*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
